--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Home{% endblock %}
+{% if page-title %}
+{% block title %}{{ page-title }}{% endblock %}
+{% endif %}
 
 {% block head %}
 {{ super() }}
@@ -7,9 +9,15 @@
 {% endblock %}
 
 {% block content %}
+
+{% if page-title %}
+<h1>{{ page-title }}</h1>
+{% endif %}
+
 {% if message %}
 <h1>Search Results for: {{ message }}</h1>
 {% endif %}
+
 <div class="product-grid">
   {% for product in products %}
   <div class="product-item">
