--- a/static/css/main.css
+++ b/static/css/main.css
@@ -228,13 +228,29 @@ body {
       height: 500px;
       line-height: 2;
       text-align: left; }
+      body main form select {
+        -ms-appearance: none;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        appearance: none;
+        background-color: #634C29;
+        border: none;
+        box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2);
+        color: #FCDFB3;
+        cursor: pointer;
+        font-size: 1.5rem;
+        padding: 12px; }
+        body main form select:hover {
+          background-color: #B09C7D; }
+        body main form select:focus {
+          outline: none; }
       body main form input, body main form label {
         width: 80%;
         color: #634C29; }
       body main form input {
         width: 100%;
         font-size: 1.5rem; }
-        body main form input[type=text], body main form input[type=email], body main form input[type=password] {
+        body main form input[type=text], body main form input[type=email], body main form input[type=password], body main form input[type=number] {
           background-color: transparent;
           border: none;
           border-bottom: 3px solid #634C29;
