--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -219,6 +219,22 @@ body
       line-height: 2
       text-align: left
 
+      select
+        +appear(none)
+        background-color: $dark-color
+        border: none
+        box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2)
+        color: $light-color
+        cursor: pointer
+        font-size: 1.5rem
+        padding: 12px
+
+        &:hover
+          background-color: $primary-color
+
+        &:focus
+          outline: none
+
       input, label
         width: 80%
         color: $dark-color
@@ -227,7 +243,7 @@ body
         width: 100%
         font-size: 1.5rem
 
-        &[type=text], &[type=email], &[type=password]
+        &[type=text], &[type=email], &[type=password], &[type=number]
           background-color: transparent
           border: none
           border-bottom: 3px solid $dark-color
