changed pape-title to title

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-{% if page-title %}
-{% block title %}{{ page-title }}{% endblock %}
+{% if title %}
+{% block title %}{{ title }}{% endblock %}
 {% endif %}
 
 {% block head %}
@@ -10,8 +10,8 @@
 
 {% block content %}
 
-{% if page-title %}
-<h1>{{ page-title }}</h1>
+{% if title %}
+<h1>{{ title }}</h1>
 {% endif %}
 
 {% if message %}
