--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
       <div class="search">
         <img class="search-btn" src="/static/assets/search.svg" alt="Search Button">
         <form class="search-form" method="POST">
-          <input type="text" name="title" value="" placeholder="What can we help you find today?">
+          <input type="text" name="name" value="" placeholder="What can we help you find today?">
           <input class="search-submit" type="image" src="/static/assets/search.svg" alt="Submit Form" />
         </form>
       </div>
