changed product.title to product.name

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,11 +7,11 @@
   <div class="product-item">
     <p>
       <a href="/products/{{ product.id }}">
-        <img src="../{{ product.img }}" alt="{{ product.title }}">
+        <img src="../{{ product.img }}" alt="{{ product.name }}">
       </a>
     </p>
     <p>
-      <a href="/products/{{ product.id }}">{{ product.title }}</a>
+      <a href="/products/{{ product.id }}">{{ product.name }}</a>
     </p>
     <p>${{ product.price }}</p>
   </div>
