--- a/templates/admin-delete-category.html
+++ b/templates/admin-delete-category.html
@@ -1,13 +1,13 @@
 {% extends "base-admin.html" %}
-{% block title %}Admin{% endblock %}
+{% block title %}Delete Category - Admin{% endblock %}
 
 {% block content %}
-    <h1>Delete Products</h1>
+    <h1>Delete Category</h1>
     <form  action="/admin" method="POST">
       <label for="name">
         Enter product name:
         <input type="text" name="name" id="name">
       </label>
-      <input type="submit" name="button" value="Delete Product">
+      <input type="submit" name="button" value="Delete Category">
     </form>
 {% endblock %}
