added nav links for catagory

--- a/templates/base-admin.html
+++ b/templates/base-admin.html
@@ -9,6 +9,8 @@
 <h1><a href="/admin">Admin</a></h1>
 <nav>
   <ul>
+    <li><a href="/admin/add-category">Add Category</a></li>
+    <li><a href="/admin/delete-category">Delete Category</a></li>
     <li><a href="/admin/add-products">Add Products</a></li>
     <li><a href="/admin/delete-products">Delete Products</a></li>
   </ul>
