--- a/templates/product-details.html
+++ b/templates/product-details.html
@@ -7,10 +7,10 @@
 {% block content %}
   <div class="product-detail">
     <div class="product-detail-image">
-      <img src="../{{ product.img }}" alt="{{ product.title }}">
+      <img src="../{{ product.img }}" alt="{{ product.name }}">
     </div>
     <div class="product-detail-text">
-      <p>{{ product.title }}</p>
+      <p>{{ product.name }}</p>
       <p>${{ product.price }}</p>
     </div>
   </div>
