added class to product price

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -13,7 +13,7 @@
     <p>
       <a href="/products/{{ product.id }}">{{ product.name }}</a>
     </p>
-    <p>${{ product.price }}</p>
+    <p class="price">${{ product.price }}</p>
   </div>
   {% endfor %}
 </div>
