added styles for cart and button

--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -59,6 +59,18 @@ body
         padding: 0
         margin: 0
 
+        .circle
+          display: block
+          color: $light-color
+          background-color: $dark-color
+          border-radius: 50%
+          height: 24px
+          width: 24px
+          transform: translate(17px, -35px)
+
+        .cart
+          transform: translate(-19px, 16px)
+
         a
           margin: 0 10px
           text-decoration: none
