--- a/static/css/main.css
+++ b/static/css/main.css
@@ -85,6 +85,16 @@ body {
       body header .top-row .user-icons {
         padding: 0;
         margin: 0; }
+        body header .top-row .user-icons .circle {
+          display: block;
+          color: #FCDFB3;
+          background-color: #634C29;
+          border-radius: 50%;
+          height: 24px;
+          width: 24px;
+          transform: translate(17px, -35px); }
+        body header .top-row .user-icons .cart {
+          transform: translate(-19px, 16px); }
         body header .top-row .user-icons a {
           margin: 0 10px;
           text-decoration: none; }
