added class to cart

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,8 @@
           <img src="/static/assets/user.svg" alt="My Account">
         </a>
         <a href="/cart">
-          <img src="/static/assets/shopping-cart.svg" alt="Shopping Cart">
+          <img class="cart" src="/static/assets/shopping-cart.svg" alt="Shopping Cart">
+          <div class="circle">1</div>
         </a>
       </div>
     </div>
