changed nav links to support dynamic routes

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,14 +34,14 @@
     </div>
     <nav>
       <ul>
-        <li><a href="/boards">Boards</a></li>
-        <li><a href="/plywood">Plywood</a></li>
-        <li><a href="/pressure-treated">Pressure Treated</a></li>
-        <li><a href="/dimensional-lumber">Dimensional Lumber</a></li>
-        <li><a href="/decking">Decking</a></li>
-        <li><a href="/fencing">Fencing</a></li>
-        <li><a href="/paneling">Paneling</a></li>
-        <li><a href="/lattice">Lattice</a></li>
+        <li><a href="/category/boards">Boards</a></li>
+        <li><a href="/category/plywood">Plywood</a></li>
+        <li><a href="/category/pressure-treated">Pressure Treated</a></li>
+        <li><a href="/category/dimensional-lumber">Dimensional Lumber</a></li>
+        <li><a href="/category/decking">Decking</a></li>
+        <li><a href="/category/fencing">Fencing</a></li>
+        <li><a href="/category/paneling">Paneling</a></li>
+        <li><a href="/category/lattice">Lattice</a></li>
       </ul>
     </nav>
     {% block nav %}{% endblock %}
