--- a/templates/admin-add-products.html
+++ b/templates/admin-add-products.html
@@ -8,7 +8,7 @@
         Name
       <input type="text" name="name" required>
       </label>
-      <select name="category">
+      <select name="category" required>
         <option value="" selected disabled hidden>Choose a product category &nbsp;&nbsp;&nbsp;&nbsp; ▼</option>
         {% for category in categories %}
         <option value="{{ category.id }}">{{ category.name }}</option>
