updated add products to add product and delete products to delete product

--- a/templates/base-admin.html
+++ b/templates/base-admin.html
@@ -11,8 +11,8 @@
   <ul>
     <li><a href="/admin/add-category">Add Category</a></li>
     <li><a href="/admin/delete-category">Delete Category</a></li>
-    <li><a href="/admin/add-products">Add Products</a></li>
-    <li><a href="/admin/delete-products">Delete Products</a></li>
+    <li><a href="/admin/add-product">Add Product</a></li>
+    <li><a href="/admin/delete-product">Delete Product</a></li>
   </ul>
 </nav>
 {% endblock %}
