--- a/templates/admin-add-product.html
+++ b/templates/admin-add-product.html
@@ -1,5 +1,5 @@
 {% extends "base-admin.html" %}
-{% block title %}Admin{% endblock %}
+{% block title %}Add Product - Admin{% endblock %}
 
 {% block content %}
     <h1>Add Product</h1>
