--- a/online_store/templates/admin.html
+++ b/online_store/templates/admin.html
@@ -18,6 +18,8 @@
       <a href="/products/{{ product.id }}">{{ product.name }}</a>
     </p>
     <p class="price">${{ product.price }}</p>
+    <button type="button" name="update-product">Update Product</button>
+    <button type="button" name="delete-product">Delete Product</button>
   </div>
   {% endfor %}
 </div>
