--- a/online_store/templates/base.html
+++ b/online_store/templates/base.html
@@ -48,6 +48,13 @@
   </header>
 
   <main>
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        {% for message in messages %}
+          <p>{{ message }}</p>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
   </main>
 
