styled new WTForms

--- a/online_store/static/css/main.sass
+++ b/online_store/static/css/main.sass
@@ -195,100 +195,145 @@ body
         background-color: $light-color
         width: 35%
 
-    .signup
-      display: none
-
-      small
-        +noselect
-        color: $accent-dark-color
-
-        a
-          color: $light-color
-          cursor: pointer
-          text-decoration: underline
-
-    .login
-
-      small
-        +noselect
-        color: $accent-dark-color
-
-        a
-          color: $light-color
-          cursor: pointer
-          text-decoration: underline
-
     form
+      +flexbox(column)
       background-color: $light-color
       margin: auto
-      display: flex
-      flex-direction: column
+      padding: 1rem
       font-size: 1.5rem
       justify-content: space-around
-      align-items: center
       width: 500px
-      height: 500px
       line-height: 2
-      text-align: left
 
-      select
-        +appear(none)
-        background-color: $dark-color
+      & *
+        margin: 0.5rem 0
+
+      fieldset
+        +flexbox(column)
         border: none
-        box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2)
-        color: $light-color
-        cursor: pointer
-        font-size: 1.5rem
-        padding: 12px
-
-        &:hover
-          background-color: $primary-color
-
-        &:focus
-          outline: none
-
-      input, label
         width: 80%
-        color: $dark-color
 
-      input
-        width: 100%
-        font-size: 1.5rem
-
-        &[type=text], &[type=email], &[type=password], &[type=number]
-          background-color: transparent
+        legend
           border: none
-          border-bottom: 3px solid $dark-color
-          outline: $dark-color
+          font-size: 2rem
 
-        &[type=submit]
+        select
           +appear(none)
-          padding: 1rem 2rem
-          width: 80%
-          display: inline-block
+          background-color: $dark-color
           border: none
-          margin: 0
-          text-decoration: none
-          background: $dark-color
+          box-shadow: 0 5px 25px rgba(0, 0, 0, 0.2)
           color: $light-color
-          font-family: sans-serif
           cursor: pointer
-          text-align: center
-          transition: background 150ms ease-in-out, transform 50ms ease
+          font-size: 1.5rem
+          padding: 12px
 
-          &:hover, &:focus
-            background: $primary-color
+          &:hover
+            background-color: $primary-color
 
           &:focus
-            outline: 1px solid $primary-color
-            outline-offset: -4px
+            outline: none
 
-          &:active
-            transform: scale(0.95)
+        input, label
+          color: $dark-color
 
-        &[type="file"]
-          z-index: 0
-          // display: none
+        input
+          font-size: 1.5rem
+          text-align: left
+
+          &[type=text], &[type=email], &[type=password], &[type=number]
+            background-color: transparent
+            border: none
+            border-bottom: 3px solid $dark-color
+            outline: $dark-color
+
+          &[type="file"]
+            z-index: 0
+
+        .remember
+          +flexbox(row)
+          justify-content: space-around
+          width: 100%
+
+          .switch
+            position: relative
+            display: inline-block
+            width: 60px
+            height: 34px
+
+            input
+              opacity: 0
+              width: 0
+              height: 0
+
+            input:checked + .slider
+              background-color: $dark-color
+
+            input:focus + .slider
+              box-shadow: 0 0 1px $dark-color
+
+            input:checked + .slider:before
+              -webkit-transform: translateX(26px)
+              -ms-transform: translateX(26px)
+              transform: translateX(26px)
+
+            .slider
+              position: absolute
+              cursor: pointer
+              top: 0
+              left: 0
+              right: 0
+              bottom: 0
+              background-color: $primary-color
+              -webkit-transition: .4s
+              transition: .4s
+              border-radius: 34px
+
+              &:before
+                position: absolute
+                content: ""
+                height: 26px
+                width: 26px
+                left: 4px
+                bottom: 4px
+                background-color: $light-color
+                -webkit-transition: .4s
+                transition: .4s
+                border-radius: 50%
+
+      input[type=submit]
+        @extend %btn
+        width: 100%
+
+        &:hover, &:focus
+          background: $primary-color
+
+        &:focus
+          outline: 1px solid $primary-color
+          outline-offset: -4px
+
+        &:active
+          transform: scale(0.95)
+
+      small
+
+        a
+          +noselect
+          color: $dark-color
+          cursor: pointer
+          text-decoration: underline
+          font-size: 0.8rem
+
+    .change-form
+
+      small
+        +noselect
+        color: $accent-dark-color
+        font-size: 0.8rem
+
+        a
+          color: $light-color
+          cursor: pointer
+          text-decoration: underline
 
   footer
     background-color: $light-color
