--- a/online_store/templates/account.html
+++ b/online_store/templates/account.html
@@ -11,7 +11,7 @@
 <form method="POST" enctype="multipart/form-data">
   {{ form.hidden_tag() }}
   <fieldset>
-    <legend>Account</legend>
+    <legend>{{ title }}</legend>
     <div>
       {{ form.username.label }}
       {% if form.username.errors %}
