changed form to WTForm

--- a/online_store/templates/admin-add-category.html
+++ b/online_store/templates/admin-add-category.html
@@ -2,12 +2,25 @@
 {% block title %}Add Category - Admin{% endblock %}
 
 {% block content %}
-    <h1>Add Category</h1>
-    <form action="/admin" method="POST">
-      <label>
-        Name
-      <input type="text" name="name" required>
-      </label>
-      <input type="submit" name="button" value="Add Category">
-    </form>
+<form method="POST">
+  {{ form.hidden_tag() }}
+  <fieldset>
+    <div>
+      {{ form.name.label }}
+      {% if form.name.errors %}
+        {{ form.name(class="is-invalid") }}
+        <div class="invalid-feedback">
+          {% for error in form.name.errors %}
+            {{ error }}
+          {% endfor %}
+        </div>
+      {% else %}
+        {{ form.name }}
+      {% endif %}
+    </div>
+  </fieldset>
+  <div>
+    {{ form.submit }}
+  </div>
+</form>
 {% endblock %}
