--- a/online_store/templates/home.html
+++ b/online_store/templates/home.html
@@ -13,17 +13,12 @@
 <h1>Search Results for: {{ search_message }}</h1>
 {% endif %}
 
-{% if message %}
-<h3>{{ message }}</h3>
-{% endif %}
-
-
 <div class="product-grid">
   {% for product in products %}
   <div class="product-item">
     <p>
       <a href="/products/{{ product.id }}">
-        <img src="../{{ product.img }}" alt="{{ product.name }}">
+        <img src="../{{ product.image }}" alt="{{ product.name }}">
       </a>
     </p>
     <p class="name">
