--- a/online_store/templates/register.html
+++ b/online_store/templates/register.html
@@ -1,71 +1,73 @@
 {% extends "base.html" %}
 {% block content %}
 
-<form method="POST">
-  {{ form.hidden_tag() }}
-  <fieldset>
-    <legend>Sign Up</legend>
+<div class="signup">
+  <form method="POST">
+    {{ form.hidden_tag() }}
+    <fieldset>
+      <legend>{{ title }}</legend>
+      <div>
+        {{ form.username.label }}
+        {% if form.username.errors %}
+          {{ form.username(class="is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.username.errors %}
+              {{ error }}
+            {% endfor %}
+          </div>
+        {% else %}
+          {{ form.username }}
+        {% endif %}
+      </div>
+      <div>
+        {{ form.email.label }}
+        {% if form.email.errors %}
+          {{ form.email(class="is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.email.errors %}
+              {{ error }}
+            {% endfor %}
+          </div>
+        {% else %}
+          {{ form.email }}
+        {% endif %}
+      </div>
+      <div>
+        {{ form.password.label }}
+        {% if form.password.errors %}
+          {{ form.password(class="is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.password.errors %}
+              {{ error }}
+            {% endfor %}
+          </div>
+        {% else %}
+          {{ form.password }}
+        {% endif %}
+      </div>
+      <div>
+        {{ form.confirm_password.label }}
+        {% if form.confirm_password.errors %}
+          {{ form.confirm_password(class="is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.confirm_password.errors %}
+              {{ error }}
+            {% endfor %}
+          </div>
+        {% else %}
+          {{ form.confirm_password }}
+        {% endif %}
+      </div>
+    </fieldset>
     <div>
-      {{ form.username.label }}
-      {% if form.username.errors %}
-        {{ form.username(class="is-invalid") }}
-        <div class="invalid-feedback">
-          {% for error in form.username.errors %}
-            {{ error }}
-          {% endfor %}
-        </div>
-      {% else %}
-        {{ form.username }}
-      {% endif %}
+      {{ form.submit }}
     </div>
-    <div>
-      {{ form.email.label }}
-      {% if form.email.errors %}
-        {{ form.email(class="is-invalid") }}
-        <div class="invalid-feedback">
-          {% for error in form.email.errors %}
-            {{ error }}
-          {% endfor %}
-        </div>
-      {% else %}
-        {{ form.email }}
-      {% endif %}
-    </div>
-    <div>
-      {{ form.password.label }}
-      {% if form.password.errors %}
-        {{ form.password(class="is-invalid") }}
-        <div class="invalid-feedback">
-          {% for error in form.password.errors %}
-            {{ error }}
-          {% endfor %}
-        </div>
-      {% else %}
-        {{ form.password }}
-      {% endif %}
-    </div>
-    <div>
-      {{ form.confirm_password.label }}
-      {% if form.confirm_password.errors %}
-        {{ form.confirm_password(class="is-invalid") }}
-        <div class="invalid-feedback">
-          {% for error in form.confirm_password.errors %}
-            {{ error }}
-          {% endfor %}
-        </div>
-      {% else %}
-        {{ form.confirm_password }}
-      {% endif %}
-    </div>
-  </fieldset>
+  </form>
   <div>
-    {{ form.submit }}
+    <small>
+      Already have an account? <a href="{{ url_for('login') }}">Login</a>
+    </small>
   </div>
-</form>
-<div>
-  <small>
-    Already have an account? <a href="{{ url_for('login') }}">Login</a>
-  </small>
 </div>
 
 {% endblock %}
