--- a/online_store/templates/admin.html
+++ b/online_store/templates/admin.html
@@ -8,7 +8,7 @@
   <div class="product-item">
     <p>
       <a href="/products/{{ product.id }}">
-        <img src="../{{ product.image }}" alt="{{ product.name }}">
+        <img src="{{ url_for('static', filename='product-images/' + product.image) }}" alt="{{ product.name }}">
       </a>
     </p>
     <p>
