--- a/online_store/templates/account.html
+++ b/online_store/templates/account.html
@@ -8,7 +8,7 @@
 <h2>{{ current_user.username }}</h2>
 <p>{{ current_user.email }}</p>
 
-<form method="POST" enctype="multipart/form-data">
+<form class="full-form" method="POST" enctype="multipart/form-data">
   {{ form.hidden_tag() }}
   <fieldset>
     <legend>{{ title }}</legend>
