added class to form for styling

--- a/online_store/templates/admin-add-category.html
+++ b/online_store/templates/admin-add-category.html
@@ -2,7 +2,7 @@
 {% block title %}Add Category - Admin{% endblock %}
 
 {% block content %}
-<form method="POST">
+<form class="full-form" method="POST">
   {{ form.hidden_tag() }}
   <fieldset>
     <div>
