added class to form for styling

--- a/online_store/templates/admin-add-product.html
+++ b/online_store/templates/admin-add-product.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<form method="POST" enctype="multipart/form-data">
+<form class="full-form" method="POST" enctype="multipart/form-data">
   {{ form.hidden_tag() }}
   <fieldset>
     <legend>{{ title }}</legend>
