--- a/online_store/templates/admin.html
+++ b/online_store/templates/admin.html
@@ -15,8 +15,12 @@
       <a href="/products/{{ product.id }}">{{ product.name }}</a>
     </p>
     <p class="price">${{ product.price }}</p>
-    <button type="button" name="update-product">Update Product</button>
-    <button type="button" name="delete-product">Delete Product</button>
+    <form class="product-form" action="{{ url_for('update_product', product_id=product.id) }}" method="POST">
+      <input type="submit" value="Update">
+    </form>
+    <form class="product-form" action="{{ url_for('delete_product', product_id=product.id) }}" method="POST">
+      <input type="submit" value="Delete">
+    </form>
   </div>
   {% endfor %}
 </div>
