--- a/online_store/templates/base.html
+++ b/online_store/templates/base.html
@@ -20,9 +20,9 @@
     <div class="top-row">
       <div class="search">
         <img class="search-btn" src="/static/assets/search.svg" alt="Search Button">
-        <form class="search-form" method="POST">
+        <form class="search-form" action="/"  method="POST">
           <input type="text" name="name" value="" placeholder="What can we help you find today?">
-          <input class="search-submit" type="image" src="/static/assets/search.svg" alt="Submit Form" />
+          <input class="search-submit" type="image" src="{{ url_for('static', filename='assets/search.svg') }}" alt="Submit Form" />
         </form>
       </div>
       <h1><a href="{{ url_for('home') }}">Woody's Lumber Yard</a></h1>
