added class to form for styling

--- a/online_store/templates/login.html
+++ b/online_store/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="login">
-  <form method="POST">
+  <form class="full-form" method="POST">
     {{ form.hidden_tag() }}
     <fieldset>
       <legend>Login</legend>
