added class to form for styling

--- a/online_store/templates/register.html
+++ b/online_store/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="signup">
+<div class="full-form" class="signup">
   <form method="POST">
     {{ form.hidden_tag() }}
     <fieldset>
