reconfigured to use blueprints and packages

--- a/online_store/static/css/main.css
+++ b/online_store/static/css/main.css
@@ -221,7 +221,7 @@ body {
       padding: 1rem;
       font-size: 1.5rem;
       justify-content: space-around;
-      width: 500px;
+      width: 440px;
       line-height: 2; }
       body main .full-form * {
         margin: 0.5rem 0; }
@@ -231,7 +231,8 @@ body {
         justify-content: center;
         align-items: center;
         border: none;
-        width: 80%; }
+        margin: auto;
+        width: 100%; }
         body main .full-form fieldset legend {
           border: none;
           font-size: 2rem; }
