--- a/online_store/static/css/main.sass
+++ b/online_store/static/css/main.sass
@@ -219,7 +219,7 @@ body
       padding: 1rem
       font-size: 1.5rem
       justify-content: space-around
-      width: 500px
+      width: 440px
       line-height: 2
 
       & *
@@ -228,7 +228,8 @@ body
       fieldset
         +flexbox(column)
         border: none
-        width: 80%
+        margin: auto
+        width: 100%
 
         legend
           border: none
