--- a/online_store/templates/login.html
+++ b/online_store/templates/login.html
@@ -43,7 +43,7 @@
   </form>
   <div class="change-form">
     <small>
-      Need an account? <a href="{{ url_for('register') }}">Sign Up</a>
+      Need an account? <a href="{{ url_for('users.register') }}">Sign Up</a>
     </small>
   </div>
 </div>
