--- a/online_store/templates/admin.html
+++ b/online_store/templates/admin.html
@@ -15,10 +15,10 @@
       <a href="/products/{{ product.id }}">{{ product.name }}</a>
     </p>
     <p class="price">${{ product.price }}</p>
-    <form class="product-form" action="{{ url_for('update_product', product_id=product.id) }}" method="POST">
+    <form class="product-form" action="{{ url_for('admin.update_product', product_id=product.id) }}" method="POST">
       <input type="submit" value="Update">
     </form>
-    <form class="product-form" action="{{ url_for('delete_product', product_id=product.id) }}" method="POST">
+    <form class="product-form" action="{{ url_for('admin.delete_product', product_id=product.id) }}" method="POST">
       <input type="submit" value="Delete">
     </form>
   </div>
