--- a/online_store/templates/register.html
+++ b/online_store/templates/register.html
@@ -6,58 +6,50 @@
     {{ form.hidden_tag() }}
     <fieldset>
       <legend>{{ title }}</legend>
-      <div>
-        {{ form.username.label }}
-        {% if form.username.errors %}
-          {{ form.username(class="is-invalid") }}
-          <div class="invalid-feedback">
-            {% for error in form.username.errors %}
-              {{ error }}
-            {% endfor %}
-          </div>
-        {% else %}
-          {{ form.username }}
-        {% endif %}
-      </div>
-      <div>
-        {{ form.email.label }}
-        {% if form.email.errors %}
-          {{ form.email(class="is-invalid") }}
-          <div class="invalid-feedback">
-            {% for error in form.email.errors %}
-              {{ error }}
-            {% endfor %}
-          </div>
-        {% else %}
-          {{ form.email }}
-        {% endif %}
-      </div>
-      <div>
-        {{ form.password.label }}
-        {% if form.password.errors %}
-          {{ form.password(class="is-invalid") }}
-          <div class="invalid-feedback">
-            {% for error in form.password.errors %}
-              {{ error }}
-            {% endfor %}
-          </div>
-        {% else %}
-          {{ form.password }}
-        {% endif %}
-      </div>
-      <div>
-        {{ form.confirm_password.label }}
-        {% if form.confirm_password.errors %}
-          {{ form.confirm_password(class="is-invalid") }}
-          <div class="invalid-feedback">
-            {% for error in form.confirm_password.errors %}
-              {{ error }}
-            {% endfor %}
-          </div>
-        {% else %}
-          {{ form.confirm_password }}
-        {% endif %}
-      </div>
+      {{ form.username.label }}
+      {% if form.username.errors %}
+        {{ form.username(class="is-invalid") }}
+        <div class="invalid-feedback">
+          {% for error in form.username.errors %}
+            {{ error }}
+          {% endfor %}
+        </div>
+      {% else %}
+        {{ form.username }}
+      {% endif %}
+      {{ form.email.label }}
+      {% if form.email.errors %}
+        {{ form.email(class="is-invalid") }}
+        <div class="invalid-feedback">
+          {% for error in form.email.errors %}
+            {{ error }}
+          {% endfor %}
+        </div>
+      {% else %}
+        {{ form.email }}
+      {% endif %}
+      {{ form.password.label }}
+      {% if form.password.errors %}
+        {{ form.password(class="is-invalid") }}
+        <div class="invalid-feedback">
+          {% for error in form.password.errors %}
+            {{ error }}
+          {% endfor %}
+        </div>
+      {% else %}
+        {{ form.password }}
+      {% endif %}
+      {{ form.confirm_password.label }}
+      {% if form.confirm_password.errors %}
+        {{ form.confirm_password(class="is-invalid") }}
+        <div class="invalid-feedback">
+          {% for error in form.confirm_password.errors %}
+            {{ error }}
+          {% endfor %}
+        </div>
+      {% else %}
+        {{ form.confirm_password }}
+      {% endif %}
     </fieldset>
     <div>
       {{ form.submit }}
@@ -65,7 +57,7 @@
   </form>
   <div>
     <small>
-      Already have an account? <a href="{{ url_for('login') }}">Login</a>
+      Already have an account? <a href="{{ url_for('users.login') }}">Login</a>
     </small>
   </div>
 </div>
