--- a/online_store/templates/login.html
+++ b/online_store/templates/login.html
@@ -39,7 +39,7 @@
     <div>
       {{ form.submit }}
     </div>
-    <small><a href="#">Forgot Password?</a></small>
+    <small><a href="{{ url_for('users.reset_request') }}">Forgot Password?</a></small>
   </form>
   <div class="change-form">
     <small>
