changed base to admin/base

--- a/online_store/templates/admin/add-product.html
+++ b/online_store/templates/admin/add-product.html
@@ -1,4 +1,4 @@
-{% extends "base-admin.html" %}
+{% extends "admin/base.html" %}
 {% block title %}Add Product - Admin{% endblock %}
 
 {% block content %}
