--- a/online_store/templates/admin/add-category.html
+++ b/online_store/templates/admin/add-category.html
@@ -1,4 +1,4 @@
-{% extends "base-admin.html" %}
+{% extends "admin/base.html" %}
 {% block title %}Add Category - Admin{% endblock %}
 
 {% block content %}
